Fix overflow issue on chart card

--- a/frontend/pages/DashboardPage/_styles.scss
+++ b/frontend/pages/DashboardPage/_styles.scss
@@ -76,6 +76,11 @@
     display: grid;
     row-gap: $gap-page-component;
 
+    .card {
+      box-sizing: border-box;
+      overflow-x: hidden;
+    }
+
     @media screen and (min-width: $break-md) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
       column-gap: $gap-page-component;
